--- a/public/resource/boardlist.css
+++ b/public/resource/boardlist.css
@@ -1,30 +1,41 @@
 .post-table {
     width: 100%;
     border-collapse: collapse;
-    margin: 20px 0;
-    font-size: 18px;
-    text-align: left;
+    margin-top: 20px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
+
 .table-header {
-    background-color: #4CAF50;
+    background-color: #007BFF;
     color: white;
 }
+
 .table-header th {
     padding: 12px;
+    text-align: left;
+    font-weight: bold;
+    font-size: 16px;
 }
+
 .table-row {
     border-bottom: 1px solid #ddd;
 }
+
+.table-row td {
+    padding: 10px;
+    color: #555;
+    font-size: 14px;
+}
+
 .table-row:hover {
     background-color: #f1f1f1;
 }
-.table-row td {
-    padding: 12px;
-}
+
 .post-link {
-    color: #1a0dab;
+    color: #007BFF;
     text-decoration: none;
 }
+
 .post-link:hover {
     text-decoration: underline;
 }
